# ifec

./: .gitignore  pyproject.toml
1/: main.ipynb  main.py
1-integração-direta-MC/: main.ipynb
2-termalização-ising/: main.py
3/: main.ipynb  main.py
3-propriedades-ising-2D/: main.ipynb  main.py
4/: main.ipynb  main.py
4-caixeiro-viajante/: main.ipynb  main.py
5/: main.py
5-redes-complexas/: main.ipynb  main.py
6/: caixeiro_viajante.py
6-autômatos-celulares/: main.ipynb  main.py
7-teoria-dos-jogos/: main.ipynb  main.py
8-caminhadas-aleatórias/: main.ipynb  main.py
