[tool.mypy]
mypy_path = "~/.config/mypy/stubs/"

[tool.ruff]
ignore = ["E501"]

[tool.poetry]
name = "ifec"
version = "0.1.0"
description = ""
authors = ["Igor <igorlfs@ufmg.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numba = "^0.57"
catppuccin-matplotlib = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
